    core.distances for quickly calculating bond information
  * added applyPBC(coords, box) function to core.distances to move 
    coordinates to within the primary unit cell
  * many AtomGroup methods now support 'pbc' flag to move atoms to within
    primary unitcell before calculation.  This behaviour can also be 
    toggled using the core.flags['use_pbc'] flag (Issue 156)

  Changes

  * libxdrfile2 is now used instead of libxdrfile. libxdrfile2 is distributed
    under GPLv2.
  * dropped support for Python 2.5; minimum requirement is Python 2.6
    (Issue 130)
  * almost all methods of AtomGroup return NumPy arrays
  * slicing and indexing of AtomGroup, Residue, ResidueGroup, Segment,
    SegmentGroup will now always return an appropriate object and
    never a simple list
  * removed Timeseries.principleAxis (probably was never working)
  * dependent on Biopython >= 1.59 (Issue 147)
  * Hydrogen bond analysis defaults to updating selection 1 and 2 for
    every timestep in order to avoid unexpected behavior (Issue 138)
  * AtomGroup.velocities is now a (managed) attribute and not a method
    anymore: replace 'ag.velocities()' with 'ag.velocities'

  Fixes

  * fixed XDR writer incorrect use of delta parameter (Issue 154)
  * fixed incorrect computation of distances in serial and parallel 
    distance_array() with PBC (Issue 151)
  * fixed Issue 129 (hole.py module pipe/file closure)
  * fixed array comparison bug in MDAnalysis.analysis.helanal
    and various enhancements to the helanal module
  * fixed MDAnalysis.analysis.rms.RMSD.run(): gave incorrect results
    if ref_frame != 0
  * alignto() now checks that the two selections describe the same
    atoms (fixes Issue 143)
  * slicing of ResidueGroup will now produce a ResidueGroup, and
    slicing of a SegmentGroup will produce a SegmentGroup, not a list
    as before (fixes Issue 135)
  * detect OpenMP-capable compiler during setup (Issue 145), which should allow