@@ -131,17 +131,22 @@ logger = logging.getLogger('MDAnalysis.analysis.rmsd')
 
 import warnings
 
-def rmsd(a,b, weights=None):
-    """Returns RMSD between two coordinate sets *a* and *b*. An implicit
-    optimal superposition is performed, which minimizes the RMSD between
-    *a* and *b*.
+def rmsd(a,b, weights=None, center=False):
+    """Returns RMSD between two coordinate sets *a* and *b*.
 
     *a* and *b* are arrays of the coordinates of N atoms of shape N*3
     as generated by, e.g.,
     :meth:`MDAnalysis.core.AtomGroup.AtomGroup.coordinates`.
 
-    Both *a* and *b* must be centered before performing the RMSD
-    calculation.
+    An implicit optimal superposition is performed, which minimizes
+    the RMSD between *a* and *b* although both *a* and *b* must be
+    centered on the origin before performing the RMSD calculation so
+    that translations are removed.
+
+    One can use the *center* = ``True`` keyword, which subtracts the
+    center of geometry (for *weights* = ``None``) before the
+    superposition. With *weights*, a weighted average is computed as
+    the center.
 
     The *weights* can be an array of length N, containing e.g. masses
     for a weighted RMSD calculation.
@@ -157,12 +162,22 @@ def rmsd(a,b, weights=None):
      >>> B = bb.coordinates()  # coordinates of last frame
      >>> rmsd(A,B)
      6.8342494129169804
+
+     .. versionchanged: 0.8.1
+        *center* keyword added
     """
-    if not weights is None:
+    if weights is not None:
         # weights are constructed as relative to the mean
-        weights = numpy.asarray(weights)/numpy.mean(weights)
+        relative_weights = numpy.asarray(weights)/numpy.mean(weights)
+    else:
+        relative_weights = None
+    if center:
+        # make copies (do not change the user data!)
+        # weights=None is equivalent to all weights 1
+        a = a - numpy.average(a, axis=0, weights=weights)
+        b = b - numpy.average(b, axis=0, weights=weights)
     return qcp.CalcRMSDRotationalMatrix(a.T.astype(numpy.float64),b.T.astype(numpy.float64),
-                                        a.shape[0], None, weights)
+                                        a.shape[0], None, relative_weights)
 
 def _process_selection(select):
     """Return a canonical selection dictionary.
